more ui: filters

--- a/UniFiler10/Controlz/LolloTextBox.xaml
+++ b/UniFiler10/Controlz/LolloTextBox.xaml
@@ -195,10 +195,14 @@
 							HorizontalScrollMode="{TemplateBinding ScrollViewer.HorizontalScrollMode}" HorizontalScrollBarVisibility="{TemplateBinding ScrollViewer.HorizontalScrollBarVisibility}" IsHorizontalRailEnabled="{TemplateBinding ScrollViewer.IsHorizontalRailEnabled}"
 							VerticalScrollMode="{TemplateBinding ScrollViewer.VerticalScrollMode}" ZoomMode="Disabled" VerticalScrollBarVisibility="{TemplateBinding ScrollViewer.VerticalScrollBarVisibility}" IsVerticalRailEnabled="{TemplateBinding ScrollViewer.IsVerticalRailEnabled}"
 							IsDeferredScrollingEnabled="{TemplateBinding ScrollViewer.IsDeferredScrollingEnabled}"
+							VerticalAlignment="Center"
+							HorizontalAlignment="Stretch"
+							VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+							HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
 							Margin="{TemplateBinding BorderThickness}" Padding="{TemplateBinding Padding}"/>
 						<ContentControl x:Name="PlaceholderTextContentPresenter" 
                             Grid.Row="1" Grid.Column="1"
-							VerticalAlignment="Stretch"
+							VerticalAlignment="Center"
 							HorizontalAlignment="Stretch"
 							VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
 							HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
